// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`work-package walk snapshots (baseline) > [default] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "default",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.json",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.json",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "gatesReadUnbound": [
        "announce-derived-review-mode:is_review_mode",
        "announce-derived-review-pr:is_review_mode",
        "assign-issue-github:issue_platform",
        "assign-issue-jira:issue_platform",
        "capture-pr-reference:is_review_mode",
        "check-github-issue:issue_platform",
        "create-review-worktree:is_review_mode",
        "github-issue-missing:issue_platform",
        "ingest-prior-feedback:is_review_mode",
        "jira-project-selection:issue_platform",
        "link-pr-to-ticket-github:issue_platform",
        "link-pr-to-ticket-jira:issue_platform",
        "lookup-current-user:issue_platform",
        "mark-review-pr-captured:is_review_mode",
        "mark-run-headless:is_review_mode",
        "review-pr-reference:is_review_mode",
        "search-github-issue:issue_platform",
        "seed-review-mode-outcomes:is_review_mode",
        "transition-issue-jira:issue_platform",
        "verify-github-issue:issue_platform",
        "verify-jira-issue:issue_platform",
      ],
      "lazyGates": {
        "pending": 21,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "verify-signing-precondition",
        "analyze-repo-with-gitnexus",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "detect-provided-issue-reference",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "revise-classification",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "codebase-comprehension.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-codebase-comprehension.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": undefined,
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "record-log-initial",
        "analyse-challenge-pass",
        "update-artifact",
        "record-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 6,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "review-findings.md",
        "debt-ledger.json",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-review-findings.md",
        "09-debt-ledger.json",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 2,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
        "apply-simplifications",
        "re-review-over-engineering",
        "validate-safety-floor",
        "reassess-simplification",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 6,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "apply-fixes",
        "reset-fix-flags",
        "re-manual-diff-review",
        "re-code-review",
        "re-test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 5,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-failure",
        "apply-fix",
        "revalidate",
      ],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 3,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-artifact-conformance",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
          },
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": {
            "awaiting_review": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 2,
        "unbound": 13,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 7,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "finalize-test-plan",
        "collect-deferred-items",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [elicitation-only] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "requirements-elicitation",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "elicitation-only",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.json",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.json",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "gatesReadUnbound": [
        "announce-derived-review-mode:is_review_mode",
        "announce-derived-review-pr:is_review_mode",
        "assign-issue-github:issue_platform",
        "assign-issue-jira:issue_platform",
        "capture-pr-reference:is_review_mode",
        "check-github-issue:issue_platform",
        "create-review-worktree:is_review_mode",
        "github-issue-missing:issue_platform",
        "ingest-prior-feedback:is_review_mode",
        "jira-project-selection:issue_platform",
        "link-pr-to-ticket-github:issue_platform",
        "link-pr-to-ticket-jira:issue_platform",
        "lookup-current-user:issue_platform",
        "mark-review-pr-captured:is_review_mode",
        "mark-run-headless:is_review_mode",
        "review-pr-reference:is_review_mode",
        "search-github-issue:issue_platform",
        "seed-review-mode-outcomes:is_review_mode",
        "transition-issue-jira:issue_platform",
        "verify-github-issue:issue_platform",
        "verify-jira-issue:issue_platform",
      ],
      "lazyGates": {
        "pending": 21,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "verify-signing-precondition",
        "analyze-repo-with-gitnexus",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "detect-provided-issue-reference",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "elicitation-only",
          "setVariable": {
            "needs_elicitation": true,
            "needs_research": false,
            "problem_complexity": "moderate",
            "skip_optional_activities": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "codebase-comprehension.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-codebase-comprehension.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": undefined,
      "manifestStatus": "warning",
      "next": "requirements-elicitation",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "record-log-initial",
        "analyse-challenge-pass",
        "update-artifact",
        "record-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "requirements-elicitation",
      "artifacts": [
        "requirements-elicitation.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "03-requirements-elicitation.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "stakeholder-transcript",
          "option": "provide-transcript",
          "setVariable": undefined,
        },
        {
          "id": "elicitation-complete",
          "option": "complete",
          "setVariable": {
            "elicitation_complete": true,
            "needs_elicitation": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": undefined,
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "stakeholder-discussion",
        "elicit-requirements",
        "ask-question",
        "collect-assumptions",
        "create-document",
        "update-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 6,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "review-findings.md",
        "debt-ledger.json",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-review-findings.md",
        "09-debt-ledger.json",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 2,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
        "apply-simplifications",
        "re-review-over-engineering",
        "validate-safety-floor",
        "reassess-simplification",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 4,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "apply-fixes",
        "reset-fix-flags",
        "re-manual-diff-review",
        "re-code-review",
        "re-test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 5,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-failure",
        "apply-fix",
        "revalidate",
      ],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 3,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-artifact-conformance",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
          },
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": {
            "awaiting_review": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 2,
        "unbound": 13,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 7,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "collect-deferred-items",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [full-workflow] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "requirements-elicitation",
    "research",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "full-workflow",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.json",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.json",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "gatesReadUnbound": [
        "announce-derived-review-mode:is_review_mode",
        "announce-derived-review-pr:is_review_mode",
        "assign-issue-github:issue_platform",
        "assign-issue-jira:issue_platform",
        "capture-pr-reference:is_review_mode",
        "check-github-issue:issue_platform",
        "create-review-worktree:is_review_mode",
        "github-issue-missing:issue_platform",
        "ingest-prior-feedback:is_review_mode",
        "jira-project-selection:issue_platform",
        "link-pr-to-ticket-github:issue_platform",
        "link-pr-to-ticket-jira:issue_platform",
        "lookup-current-user:issue_platform",
        "mark-review-pr-captured:is_review_mode",
        "mark-run-headless:is_review_mode",
        "review-pr-reference:is_review_mode",
        "search-github-issue:issue_platform",
        "seed-review-mode-outcomes:is_review_mode",
        "transition-issue-jira:issue_platform",
        "verify-github-issue:issue_platform",
        "verify-jira-issue:issue_platform",
      ],
      "lazyGates": {
        "pending": 21,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "verify-signing-precondition",
        "analyze-repo-with-gitnexus",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "detect-provided-issue-reference",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "full-workflow",
          "setVariable": {
            "needs_elicitation": true,
            "needs_research": true,
            "problem_complexity": "complex",
            "skip_optional_activities": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "codebase-comprehension.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-codebase-comprehension.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": undefined,
      "manifestStatus": "warning",
      "next": "requirements-elicitation",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "record-log-initial",
        "analyse-challenge-pass",
        "update-artifact",
        "record-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "requirements-elicitation",
      "artifacts": [
        "requirements-elicitation.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "03-requirements-elicitation.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "stakeholder-transcript",
          "option": "provide-transcript",
          "setVariable": undefined,
        },
        {
          "id": "elicitation-complete",
          "option": "complete",
          "setVariable": {
            "elicitation_complete": true,
            "needs_elicitation": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": undefined,
      "manifestStatus": "warning",
      "next": "research",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "stakeholder-discussion",
        "elicit-requirements",
        "ask-question",
        "collect-assumptions",
        "create-document",
        "update-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "research",
      "artifacts": [
        "kb-research.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "04-kb-research.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "research-convergence",
          "option": "accept-research",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 4,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "research-knowledge-base",
        "synthesize",
        "triage-research-candidates",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "close-research-phase",
        "derive-context-scope",
        "announce-derived-context-scope",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 6,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "review-findings.md",
        "debt-ledger.json",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-review-findings.md",
        "09-debt-ledger.json",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 2,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
        "apply-simplifications",
        "re-review-over-engineering",
        "validate-safety-floor",
        "reassess-simplification",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 4,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "manual-diff-review",
        "code-review",
        "dispatch-prism",
        "test-suite-review",
        "apply-fixes",
        "reset-fix-flags",
        "re-manual-diff-review",
        "re-code-review",
        "re-test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 5,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-failure",
        "apply-fix",
        "revalidate",
      ],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 3,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-artifact-conformance",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
          },
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": {
            "awaiting_review": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 2,
        "unbound": 13,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 7,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "collect-deferred-items",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [research-only] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "research",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "research-only",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.json",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.json",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "gatesReadUnbound": [
        "announce-derived-review-mode:is_review_mode",
        "announce-derived-review-pr:is_review_mode",
        "assign-issue-github:issue_platform",
        "assign-issue-jira:issue_platform",
        "capture-pr-reference:is_review_mode",
        "check-github-issue:issue_platform",
        "create-review-worktree:is_review_mode",
        "github-issue-missing:issue_platform",
        "ingest-prior-feedback:is_review_mode",
        "jira-project-selection:issue_platform",
        "link-pr-to-ticket-github:issue_platform",
        "link-pr-to-ticket-jira:issue_platform",
        "lookup-current-user:issue_platform",
        "mark-review-pr-captured:is_review_mode",
        "mark-run-headless:is_review_mode",
        "review-pr-reference:is_review_mode",
        "search-github-issue:issue_platform",
        "seed-review-mode-outcomes:is_review_mode",
        "transition-issue-jira:issue_platform",
        "verify-github-issue:issue_platform",
        "verify-jira-issue:issue_platform",
      ],
      "lazyGates": {
        "pending": 21,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "verify-signing-precondition",
        "analyze-repo-with-gitnexus",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "detect-provided-issue-reference",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "research-only",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": true,
            "problem_complexity": "moderate",
            "skip_optional_activities": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "codebase-comprehension.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-codebase-comprehension.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": undefined,
      "manifestStatus": "warning",
      "next": "research",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "record-log-initial",
        "analyse-challenge-pass",
        "update-artifact",
        "record-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "research",
      "artifacts": [
        "kb-research.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "04-kb-research.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "research-convergence",
          "option": "accept-research",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 4,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "research-knowledge-base",
        "synthesize",
        "triage-research-candidates",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "close-research-phase",
        "derive-context-scope",
        "announce-derived-context-scope",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 6,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "review-findings.md",
        "debt-ledger.json",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-review-findings.md",
        "09-debt-ledger.json",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 2,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
        "apply-simplifications",
        "re-review-over-engineering",
        "validate-safety-floor",
        "reassess-simplification",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 4,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "apply-fixes",
        "reset-fix-flags",
        "re-manual-diff-review",
        "re-code-review",
        "re-test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 5,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-failure",
        "apply-fix",
        "revalidate",
      ],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 3,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-artifact-conformance",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
          },
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": {
            "awaiting_review": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 2,
        "unbound": 13,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 7,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "collect-deferred-items",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [review-mode] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "review-mode",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.json",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.json",
        "01-README.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [
        "assign-issue-github:issue_platform",
        "assign-issue-jira:issue_platform",
        "check-github-issue:issue_platform",
        "github-issue-missing:issue_platform",
        "jira-project-selection:issue_platform",
        "link-pr-to-ticket-github:issue_platform",
        "link-pr-to-ticket-jira:issue_platform",
        "lookup-current-user:issue_platform",
        "search-github-issue:issue_platform",
        "transition-issue-jira:issue_platform",
        "verify-github-issue:issue_platform",
        "verify-jira-issue:issue_platform",
      ],
      "lazyGates": {
        "pending": 21,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "announce-derived-review-mode",
        "mark-run-headless",
        "ingest-prior-feedback",
        "seed-review-mode-outcomes",
        "derive-host-repo",
        "resolve-repo-root",
        "verify-signing-precondition",
        "analyze-repo-with-gitnexus",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "compute-canonical-target-path",
        "create-review-worktree",
        "check-branch",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
        "assess-ticket-completeness",
        "set-review-mode-path",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "codebase-comprehension.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-codebase-comprehension.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": undefined,
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "record-log-initial",
        "analyse-challenge-pass",
        "update-artifact",
        "record-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-baseline-state",
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 6,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "review-findings.md",
        "debt-ledger.json",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-review-findings.md",
        "09-debt-ledger.json",
        "09-lean-change.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 2,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 6,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 5,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "document-failures",
        "assess-test-coverage",
        "triage-reported-failures",
        "analyze-failure",
        "apply-fix",
        "revalidate",
      ],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 3,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "verify-artifact-conformance",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "document-cleanup-recommendations",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "review-summary-approval",
          "option": "post-approve",
          "setVariable": {
            "review_posted": true,
            "review_type": "approve",
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 2,
        "unbound": 13,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "consolidate-review-findings",
        "resolve-artifact-publish",
        "commit-review-artifacts",
        "generate-review-summary",
        "present-summary-to-user",
        "persist-review-summary",
        "post-pr-review",
        "await-review",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 7,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-complete-doc",
        "render-token-usage",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "resolve-close-out-publish",
        "publish-close-out-artifacts",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [skip-optional] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "skip-optional",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.json",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.json",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "gatesReadUnbound": [
        "announce-derived-review-mode:is_review_mode",
        "announce-derived-review-pr:is_review_mode",
        "assign-issue-github:issue_platform",
        "assign-issue-jira:issue_platform",
        "capture-pr-reference:is_review_mode",
        "check-github-issue:issue_platform",
        "create-review-worktree:is_review_mode",
        "github-issue-missing:issue_platform",
        "ingest-prior-feedback:is_review_mode",
        "jira-project-selection:issue_platform",
        "link-pr-to-ticket-github:issue_platform",
        "link-pr-to-ticket-jira:issue_platform",
        "lookup-current-user:issue_platform",
        "mark-review-pr-captured:is_review_mode",
        "mark-run-headless:is_review_mode",
        "review-pr-reference:is_review_mode",
        "search-github-issue:issue_platform",
        "seed-review-mode-outcomes:is_review_mode",
        "transition-issue-jira:issue_platform",
        "verify-github-issue:issue_platform",
        "verify-jira-issue:issue_platform",
      ],
      "lazyGates": {
        "pending": 21,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "verify-signing-precondition",
        "analyze-repo-with-gitnexus",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "detect-provided-issue-reference",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "skip-optional",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": false,
            "problem_complexity": "simple",
            "skip_optional_activities": true,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "codebase-comprehension.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-codebase-comprehension.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": undefined,
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "record-log-initial",
        "analyse-challenge-pass",
        "update-artifact",
        "record-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 1,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 6,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 0,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "review-findings.md",
        "debt-ledger.json",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-review-findings.md",
        "09-debt-ledger.json",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": undefined,
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 2,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
        "apply-simplifications",
        "re-review-over-engineering",
        "validate-safety-floor",
        "reassess-simplification",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 4,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "apply-fixes",
        "reset-fix-flags",
        "re-manual-diff-review",
        "re-code-review",
        "re-test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 0,
        "unbound": 5,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-failure",
        "apply-fix",
        "revalidate",
      ],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 1,
        "unbound": 3,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-artifact-conformance",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
          },
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": {
            "awaiting_review": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 2,
        "unbound": 13,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "gatesReadUnbound": [],
      "lazyGates": {
        "pending": 3,
        "unbound": 7,
        "unparsed": 0,
      },
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "finalize-test-plan",
        "collect-deferred-items",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > runs only steps the activity declares, and records how much of each it runs 1`] = `
{
  "activitiesEntered": 15,
  "declaredTotal": 273,
  "executedTotal": 165,
  "perActivity": [
    {
      "activity": "assumptions-review",
      "declared": 13,
      "executed": 3,
    },
    {
      "activity": "codebase-comprehension",
      "declared": 12,
      "executed": 10,
    },
    {
      "activity": "complete",
      "declared": 20,
      "executed": 15,
    },
    {
      "activity": "design-philosophy",
      "declared": 11,
      "executed": 9,
    },
    {
      "activity": "implement",
      "declared": 18,
      "executed": 10,
    },
    {
      "activity": "implementation-analysis",
      "declared": 13,
      "executed": 7,
    },
    {
      "activity": "lean-coding-audit",
      "declared": 9,
      "executed": 6,
    },
    {
      "activity": "plan-prepare",
      "declared": 11,
      "executed": 10,
    },
    {
      "activity": "post-impl-review",
      "declared": 19,
      "executed": 13,
    },
    {
      "activity": "requirements-elicitation",
      "declared": 12,
      "executed": 7,
    },
    {
      "activity": "research",
      "declared": 21,
      "executed": 11,
    },
    {
      "activity": "start-work-package",
      "declared": 54,
      "executed": 27,
    },
    {
      "activity": "strategic-review",
      "declared": 15,
      "executed": 11,
    },
    {
      "activity": "submit-for-review",
      "declared": 34,
      "executed": 20,
    },
    {
      "activity": "validate",
      "declared": 11,
      "executed": 6,
    },
  ],
}
`;
